language_tests/source_files/valid/assert_panics.tr
// EXPECT_EXIT: 1
// EXPECT_STDERR_CONTAINS: panic: assert should panic
func main() {
    assert(false, "assert should panic")
}
