language_tests/source_files/invalid/printf_type_mismatch_literal.tr
func main() {
    printf("%d", "x")
}
